--- a/src/screens/game/Card.css
+++ b/src/screens/game/Card.css
@@ -2,6 +2,12 @@
     max-width: 100%;
     padding: 10px;
     margin: 0 auto;
+    height: 100vh;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 
