--- a/src/screens/game/Card.css
+++ b/src/screens/game/Card.css
@@ -12,8 +12,8 @@
 
 
 .card {
-  width: 100%;
-  height: 100%;
+  max-width: 90px;
+  max-height: 90px;
   border-radius: 4px;
   box-shadow: 2px 2px 4px 4px #DEDEDE;
   transition: 0.3s;
